// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  height: 300px;
  margin-left: auto;
  margin-right: auto;
  background-color: #000;
  color: #fff;
}

<div
  className="emotion-0 emotion-1"
>
  Box
</div>
`;

exports[`Feed basic 1`] = `
.emotion-13 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
  max-width: 25%;
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

<div
  className="emotion-12 emotion-13 emotion-14"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
</div>
`;

exports[`Feed empty 1`] = `
.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  className="emotion-0 emotion-1 emotion-2"
/>
`;

exports[`Feed with theme 1`] = `
.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  max-width: 100%;
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-5 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
}

.emotion-4 + .emotion-5 {
  margin-top: 8px;
}

.emotion-5 > .emotion-3 > .emotion-1 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

<div
  className="emotion-4 emotion-5 emotion-6"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      Item
    </div>
  </div>
</div>
`;

exports[`Flex 1`] = `
.emotion-6 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  margin-left: auto;
  margin-right: auto;
}

.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 0 1;
  -ms-flex: 0 1;
  flex: 0 1;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-0 emotion-1"
  >
    Item
  </div>
  <div
    className="emotion-2 emotion-1"
  >
    Item
  </div>
  <div
    className="emotion-4 emotion-1"
  >
    Item
  </div>
</div>
`;

exports[`FlexGrid basic 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-49 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 8.333333333333332%;
  -ms-flex-preferred-size: 8.333333333333332%;
  flex-basis: 8.333333333333332%;
  max-width: 8.333333333333332%;
}

<div
  className="emotion-48 emotion-49 emotion-50"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid non-integer rem spaces 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 8.333333333333332%;
  -ms-flex-preferred-size: 8.333333333333332%;
  flex-basis: 8.333333333333332%;
  max-width: 8.333333333333332%;
}

.emotion-49 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  margin-top: -0.25rem;
  margin-bottom: -0.25rem;
}

.emotion-48 + .emotion-49 {
  margin-top: 0.25rem;
}

.emotion-49 > .emotion-3 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

<div
  className="emotion-48 emotion-49 emotion-50"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid non-integer space 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 8.333333333333332%;
  -ms-flex-preferred-size: 8.333333333333332%;
  flex-basis: 8.333333333333332%;
  max-width: 8.333333333333332%;
}

.emotion-49 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1px;
  margin-right: -1px;
  margin-top: -1px;
  margin-bottom: -1px;
}

.emotion-48 + .emotion-49 {
  margin-top: 1px;
}

.emotion-49 > .emotion-3 {
  padding-left: 1px;
  padding-right: 1px;
  padding-top: 1px;
  padding-bottom: 1px;
}

<div
  className="emotion-48 emotion-49 emotion-50"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid rem spaces 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 8.333333333333332%;
  -ms-flex-preferred-size: 8.333333333333332%;
  flex-basis: 8.333333333333332%;
  max-width: 8.333333333333332%;
}

.emotion-49 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
}

.emotion-48 + .emotion-49 {
  margin-top: 0.5rem;
}

.emotion-49 > .emotion-3 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

<div
  className="emotion-48 emotion-49 emotion-50"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
</div>
`;

exports[`FlexGrid vertical and horizontal space 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 8.333333333333332%;
  -ms-flex-preferred-size: 8.333333333333332%;
  flex-basis: 8.333333333333332%;
  max-width: 8.333333333333332%;
}

.emotion-113 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-right: -8px;
  margin-top: -8px;
  margin-bottom: -8px;
}

.emotion-112 + .emotion-113 {
  margin-top: 8px;
}

.emotion-113 > .emotion-3 {
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-50 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 16.666666666666664%;
  -ms-flex-preferred-size: 16.666666666666664%;
  flex-basis: 16.666666666666664%;
  max-width: 16.666666666666664%;
}

.emotion-74 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
  max-width: 25%;
}

.emotion-90 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 33.33333333333333%;
  -ms-flex-preferred-size: 33.33333333333333%;
  flex-basis: 33.33333333333333%;
  max-width: 33.33333333333333%;
}

.emotion-102 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  max-width: 50%;
}

.emotion-110 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
  min-width: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  max-width: 100%;
}

<div
  className="emotion-112 emotion-113 emotion-114"
>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-2 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      1
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-50 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      2
    </div>
  </div>
  <div
    className="emotion-74 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-74 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-74 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-74 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      3
    </div>
  </div>
  <div
    className="emotion-90 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-90 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-90 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      4
    </div>
  </div>
  <div
    className="emotion-102 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      6
    </div>
  </div>
  <div
    className="emotion-102 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      6
    </div>
  </div>
  <div
    className="emotion-110 emotion-3"
  >
    <div
      className="emotion-0 emotion-1"
    >
      12
    </div>
  </div>
</div>
`;

exports[`Grid basic 1`] = `
.emotion-42 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  grid-column: span 1;
  grid-row: 1;
}

.emotion-24 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  grid-column: span 2;
  grid-row: 2;
}

.emotion-36 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  grid-column: span 4;
  grid-row: 3;
}

<div
  className="emotion-42 emotion-43"
>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-0 emotion-1"
  >
    span 1
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-24 emotion-1"
  >
    span 2
  </div>
  <div
    className="emotion-36 emotion-1"
  >
    span 4
  </div>
  <div
    className="emotion-36 emotion-1"
  >
    span 4
  </div>
  <div
    className="emotion-36 emotion-1"
  >
    span 4
  </div>
</div>
`;

exports[`Image empty 1`] = `
.emotion-0 {
  display: block;
  max-width: 100%;
  height: auto;
}

<img
  className="emotion-0 emotion-1"
/>
`;

exports[`Image with image 1`] = `
.emotion-0 {
  display: block;
  max-width: 100%;
  height: auto;
  width: 50%;
}

<img
  alt=""
  className="emotion-0 emotion-1"
  src="http://placekitten.com/500"
/>
`;

exports[`Layout 1`] = `
.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

.emotion-6 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

<div
  className="emotion-6 emotion-7"
>
  <header
    className="emotion-0 emotion-1"
  >
    Header
  </header>
  <main
    className="emotion-2 emotion-1"
  >
    Main
  </main>
  <footer
    className="emotion-0 emotion-1"
  >
    Footer
  </footer>
</div>
`;

exports[`MediaObject 1`] = `
.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

<div
  className="emotion-4 emotion-5"
>
  <div
    className="emotion-0 emotion-1"
  >
    Side
  </div>
  <div
    className="emotion-2 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Text empty 1`] = `
.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

<div
  className="emotion-0 emotion-1 emotion-2 emotion-1"
/>
`;

exports[`Text with text 1`] = `
.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
}

<div
  className="emotion-0 emotion-1 emotion-2 emotion-1"
>
  Hello
</div>
`;

exports[`Text with theme 1`] = `
.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  min-width: 0;
  margin: 0;
  padding: 0;
  border: 0;
  font-family: Helvetica,system-ui,sans-serif;
  font-size: 1rem;
  line-height: 1.2;
}

<div
  className="emotion-0 emotion-1 emotion-2 emotion-1"
>
  Hello
</div>
`;
